@@ -8,10 +8,10 @@ which is based on Linux's open-by-handle API.
 Usage
 -----
 
-The vfs4j uses Java foreign function API which requires additional JVM options.
+The vfs4j uses Java 17 foreign function API which requires additional JVM options.
 
 ```
-$ sudo java --add-modules jdk.incubator.foreign -Dforeign.restricted=permit \
+$ sudo java --add-modules jdk.incubator.foreign --enable-native-access=ALL-UNNAMED \
     -jar target/vfs4j-1.0-SNAPSHOT.jar /directory/to/export /path/to/export/file
 ```
 
